/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package com.mycompany.eva2_17_interfaces_2;

/**
 *
 * @author Alonso
 */
public interface Figuras {
    public abstract double calcularArea();
    public abstract double calcularPerimetro();
    
}
